--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>PSHS Knowledge Hub - CLC:Log in</title>
             <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Poppins:wght@300&display=swap" rel="stylesheet">            
             <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Lilita+One&family=Oswald:wght@700&family=Poppins:wght@300;900&display=swap" rel="stylesheet">           
@@ -22,7 +23,6 @@
                 padding: 0;
                 font-family: 'Poppins', sans-serif;
                 background-size: cover;
-                background-position: cover;
                 font-size: 15px;
             }
             
@@ -159,9 +159,9 @@
                 position: fixed;
                 color: white;
                 width: 1536px;
-                height: 50px;
+                height: 40px;
                 font-size: 13px;
-                transition: 1s;
+                transition: 0.5s;
             }
 
             footer:hover{
@@ -198,13 +198,13 @@
                 <tr>
                     <td style="border-right: 3px solid #CACAD0;">
                         <img src="logo.png" alt="logo">
-                        <form>
-                        <input type="text" name="" placeholder="Username or Email"><br/>
-                        <input type="password" name="" placeholder="Password"><br/>
-                        <a href="home.html"><input type="submit" name="" value="Log in"></a><br/>
+                        <form action="home.html">
+                        <input type="text" name='' placeholder="Username or Email"><br/>
+                        <input type="password" name='' placeholder="Password"><br/>
+                        <a href="home.html"><input type="submit" name='' value="Log in"></a>
                         <a href="#">Forgot password?</a>
                         <p>Or sign in with</p>
-                        <a href="#" style="text-decoration: none;"><img src="google.png"></a>
+                        <a href="#" style="text-decoration: none;"><img src="google.png" alt="google logo"></a>
                         <i class="far fa-eye" id="togglePassword"></i>
                     </form>
                 </td>
@@ -223,7 +223,7 @@
             </tr>
             <tr>
                 <td style="width: 30%;">Visit us at:<br/><a href="https://web.facebook.com/pshsclc" target="_blank"><img src="facebook.png" alt="facebook logo"></a>&nbsp&nbsp&nbsp<a href="https://twitter.com/PSHS_CLC" target="_blank"><img src="twitter.png" alt="twitter logo"></a>&nbsp&nbsp&nbsp<a href="https://t.co/pkI2fnlVcQ" target="_blank"><img src="chrome.png" alt="chrome logo"></a></td>
-                <td class="phone" style="width: 40%; font-size: 15px;">Contact us:<br/><img src="telephone.png" alt="telephone">&nbsp&nbsp&nbsp(045) 499-0136 or (045) 499-5597<br/><img src="smartphone.png" alt="smartphone">&nbsp&nbsp&nbsp(+63) 925-477-7417 (Smart/TNT/SUN) or (+63) 945-407-0251 (Globe/TM)</td>
+                <td class="phone" style="width: 40%; font-size: 15px; position: relative; bottom: 10px;">Contact us:<br/><img src="telephone.png" alt="telephone">&nbsp&nbsp&nbsp(045) 499-0136 or (045) 499-5597<br/><img src="smartphone.png" alt="smartphone">&nbsp&nbsp&nbsp(+63) 925-477-7417 (Smart/TNT/SUN) or (+63) 945-407-0251 (Globe/TM)</td>
                 <td style="width: 30%;"><a href="https://pshs.edu.ph/downloads/admission_forms/2022%20RACE%20Application%20Form.pdf" target="_blank">Application</a> for PSHS 2023 Requirement for Admission, Criteria, and Evalutaion (RACE) for SY 2024-2025.</td>
             </tr>
         </table>
